--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,4 @@
-#home .row .card{padding: 10px 10px;}
+#home .row .card{margin-top: 15%;padding: 10px 10px;background-color: rgba(255, 255, 255, 0.7);}
 #home .row .card form button{display: table;margin: 0 auto;background-color: #1e2021!important;transition: all 0.2s;}
 #home .row .card form button:hover{background-color: #1565c0!important;transition: all 0.2s;}
 
@@ -6,6 +6,7 @@
 #home .row .card form .input-field input[type=text]:focus + label {
  color: #1565c0;
 }
+
 /* label underline focus color */
 #home .row .card form .input-field input[type=text]:focus {
  border-bottom: 1px solid #1565c0;
@@ -15,4 +16,3 @@
 #home .row .card form .input-field .prefix.active{
  color: #1565C0 !important;
 }
-
