--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+html{
+    background-image: url('../assets/background-matrix.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    min-height: 100%;
+}
 body {
     font-family: 'Open Sans';
 }
